--- a/easyhumanresouce/src/main/resources/application.properties
+++ b/easyhumanresouce/src/main/resources/application.properties
@@ -1,18 +1,23 @@
-jdbc.url =jdbc:mysql://localhost:3306
-jdbc.driver =com.mysql.jdbc.Driver
-jdbc.user =root
-jdbc.pass =1234
+jdbc.url =jdbc:h2:mem
+jdbc.driver =org.h2.Driver
+jdbc.user =sa
+jdbc.pass =
 
 logging.level.root= WARN
 logging.level.org.springframework.web= ERROR
 logging.level.com.concretepage= DEBUG
 logging.path= ehrm/logs
 
-spring.datasource.url = jdbc:mysql://localhost:3306/ehrm
-spring.datasource.username = root
-spring.datasource.password = 1234
- 
-
 server.port=9080
-server.error.whitelabel.enabled=false
+#server.error.whitelabel.enabled=false
 
+####
+# Datasource properties
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+# Datasource initializer properties
+spring.datasource.initialize=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
